--- a/.github/workflows/tests-workflow.yml
+++ b/.github/workflows/tests-workflow.yml
@@ -14,35 +14,35 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-  env:
-    FULL_NAME: "Прилепо Полина Максимовна"
-    GROUP_NUMBER: "M3117"
-      
-  steps:
-  # Шаг 1: Клонирование репозитория
-  - name: Checkout repository uses:
-    actions/checkout@v3
+    env:
+      FULL_NAME: "Прилепо Полина Максимовна"
+      GROUP_NUMBER: "M3117"
 
-  # Шаг 2: Вывод информации
-  - name: Print information
-    run: |
-      echo "ФИO: ${{ env. FULL_NAME }}"
-      echo "Hoмep rpуnпы: ${{ env.GROUP_NUMBER }}"
-      echo "Hиk нa Github: ${{ github.actor }}"
+    steps:
+      # Шаг 1: Клонирование репозитория
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  # Шаг 3: Установка Рутоп
-  - name: Set up Python 3.13
-    uses: actions/setup-python@v4
-    with:
-      python-version: 3.13
-
-  # Шаг 4: Запуск юнит-тестов
-  - name: Run unit tests
-    run: |
-      python -m unittest discover -s tests
-
-  # Шаг 5: Проверка стиля с использованием flake8
-  - name: Lint code with flake8
-    run: |
-      pip install flake8
-      flake8 --ignore=F401 .
+      # Шаг 2: Вывод информации
+      - name: Print information
+        run: |
+          echo "ФИO: ${{ env. FULL_NAME }}"
+          echo "Hoмep rpуnпы: ${{ env.GROUP_NUMBER }}"
+          echo "Hиk нa Github: ${{ github.actor }}"
+    
+      # Шаг 3: Установка Рутоп
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.13
+    
+      # Шаг 4: Запуск юнит-тестов
+      - name: Run unit tests
+        run: |
+          python -m unittest discover -s tests
+    
+      # Шаг 5: Проверка стиля с использованием flake8
+      - name: Lint code with flake8
+        run: |
+          pip install flake8
+          flake8 --ignore=F401 .
