--- a/.github/workflows/tests-workflow2.yml
+++ b/.github/workflows/tests-workflow2.yml
@@ -38,7 +38,7 @@ jobs:
       # Шаг 4: Запуск юнит-тестов
       - name: Run unit tests
         run: |
-          python -m unittest discover -s tests
+          python -m unittest discover -s Tests
     
       # Шаг 5: Проверка стиля с использованием flake8
       - name: Lint code with flake8
