Update Uruli is testing out GitHub Actions 🚀 !2.yml

--- a/.github/workflows/Uruli is testing out GitHub Actions 🚀 !1.yml
+++ b/.github/workflows/Uruli is testing out GitHub Actions 🚀 !1.yml
@@ -1,18 +1,31 @@
 name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+run-name: ${{ github.actor }} is testing out GitHub Actions
 on: [push]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
+    env: 
+      FULL_NAME: "Prilepo Polina Maksimovna"
+      GROUP_NUMBER: "M3117"
+      NICKNAME_GITHUB: "Uruli"
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Output information to console
+        run: |
+          echo "Full Name: ${{ env.FULL_NAME }}"
+          echo "Group: ${{ env.GROUP_NUMBER }}"
+          echo "GitHub Nick: ${{ github.actor }}"
+      - name: Installing Python 3.13
+        uses: actions/setup-python@v4        
+        with:
+          python-version: '3.13'
+      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "The workflow is now ready to test your code on the runner."
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: echo "This job's status is ${{ job.status }}."
