--- a/.github/workflows/Uruli is testing out GitHub Actions 🚀 !1.yml
+++ b/.github/workflows/Uruli is testing out GitHub Actions 🚀 !1.yml
@@ -18,14 +18,13 @@ jobs:
         uses: actions/setup-python@v4        
         with:
           python-version: '3.13'
-      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
+      #fourth step
+      - name: Run unit tests
         run: |
-          ls ${{ github.workspace }}
-      - run: echo "This job's status is ${{ job.status }}."
+          python -m unittest discover -s /home/runner/work/geometric_lib/geometric_lib/tests
+          
+        #fifth step
+      - name: Lint code with flake8
+        run: |
+          pip install flake8
+          flake8 --ignore=F401 .
