--- a/.github/workflows/Uruli is testing out GitHub Actions 🚀 !1.yml
+++ b/.github/workflows/Uruli is testing out GitHub Actions 🚀 !1.yml
@@ -14,16 +14,20 @@ jobs:
           echo "Full Name: ${{ env.FULL_NAME }}"
           echo "Group: ${{ env.GROUP_NUMBER }}"
           echo "GitHub Nick: ${{ github.actor }}"
+
       - name: Installing Python 3.13
         uses: actions/setup-python@v4        
         with:
           python-version: '3.13'
-      #fourth step
+
+      - name: Check directory existence
+        run: |
+          ls -la /home/runner/work/geometric_lib/geometric_lib/featTests || echo "Directory does not exist"
+
       - name: Run tests
         run: |
           python -m unittest discover -s /home/runner/work/geometric_lib/geometric_lib/featTests
-          
-        #fifth step
+
       - name: Lint code with flake8
         run: |
           pip install flake8
